@@ -5,6 +5,7 @@ import guess.domain.Conference;
 import guess.domain.source.Event;
 import guess.domain.source.EventType;
 import guess.domain.source.Organizer;
+import guess.domain.source.Topic;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -74,40 +75,51 @@ class EventTypeServiceImplTest {
             Organizer organizer0 = new Organizer();
             organizer0.setId(0);
 
+            Topic topic0 = new Topic();
+            topic0.setId(0);
+
             EventType eventType0 = new EventType();
             eventType0.setId(0);
             eventType0.setConference(Conference.JPOINT);
             eventType0.setOrganizer(organizer0);
+            eventType0.setTopic(topic0);
 
             EventType eventType1 = new EventType();
             eventType1.setId(1);
             eventType1.setOrganizer(organizer0);
+            eventType1.setTopic(topic0);
 
-            List<EventType> eventTypes = List.of(eventType0, eventType1);
+            EventType eventType2 = new EventType();
+            eventType2.setId(2);
+            eventType2.setOrganizer(organizer0);
+
+            List<EventType> eventTypes = List.of(eventType0, eventType1, eventType2);
 
             return Stream.of(
-                    arguments(false, false, null, eventTypes, Collections.emptyList()),
-                    arguments(true, false, null, eventTypes, List.of(eventType0)),
-                    arguments(false, true, null, eventTypes, List.of(eventType1)),
-                    arguments(true, true, null, eventTypes, List.of(eventType0, eventType1)),
-                    arguments(false, false, 0L, eventTypes, Collections.emptyList()),
-                    arguments(true, false, 0L, eventTypes, List.of(eventType0)),
-                    arguments(false, true, 0L, eventTypes, List.of(eventType1)),
-                    arguments(true, true, 0L, eventTypes, List.of(eventType0, eventType1)),
-                    arguments(false, false, 1L, eventTypes, Collections.emptyList()),
-                    arguments(true, false, 1L, eventTypes, Collections.emptyList()),
-                    arguments(false, true, 1L, eventTypes, Collections.emptyList()),
-                    arguments(true, true, 1L, eventTypes, Collections.emptyList())
+                    arguments(false, false, null, null, eventTypes, Collections.emptyList()),
+                    arguments(true, false, null, null, eventTypes, List.of(eventType0)),
+                    arguments(false, true, null, null, eventTypes, List.of(eventType1, eventType2)),
+                    arguments(true, true, null, null, eventTypes, List.of(eventType0, eventType1, eventType2)),
+                    arguments(false, false, 0L, null, eventTypes, Collections.emptyList()),
+                    arguments(true, false, 0L, null, eventTypes, List.of(eventType0)),
+                    arguments(false, true, 0L, null, eventTypes, List.of(eventType1, eventType2)),
+                    arguments(true, true, 0L, null, eventTypes, List.of(eventType0, eventType1, eventType2)),
+                    arguments(false, false, 1L, null, eventTypes, Collections.emptyList()),
+                    arguments(true, false, 1L, null, eventTypes, Collections.emptyList()),
+                    arguments(false, true, 1L, null, eventTypes, Collections.emptyList()),
+                    arguments(true, true, 1L, null, eventTypes, Collections.emptyList()),
+                    arguments(true, true, 0L, 0L, eventTypes, List.of(eventType0, eventType1)),
+                    arguments(true, true, 0L, 1L, eventTypes, Collections.emptyList())
             );
         }
 
         @ParameterizedTest
         @MethodSource("data")
-        void getEventTypes(boolean isConferences, boolean isMeetups, Long organizerId, List<EventType> eventTypes,
+        void getEventTypes(boolean isConferences, boolean isMeetups, Long organizerId, Long topicId, List<EventType> eventTypes,
                            List<EventType> expected) {
             Mockito.when(eventTypeDao.getEventTypes()).thenReturn(eventTypes);
 
-            assertEquals(expected, eventTypeService.getEventTypes(isConferences, isMeetups, organizerId));
+            assertEquals(expected, eventTypeService.getEventTypes(isConferences, isMeetups, organizerId, topicId));
             Mockito.verify(eventTypeDao, VerificationModeFactory.times(1)).getEventTypes();
             Mockito.verifyNoMoreInteractions(eventTypeDao);
 
